# ball-pivoting-algorithm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bpa_debugger.blend  edge_length_finder.py  gradient_generator.py
src/: bpa.cpp  helpers.cpp  helpers.h  io.cpp  io.h  io_details.h  main.cpp  primitives.h  trace.h
src/bpa/: bpa.cpp  bpa.h  bpa_details.h  front.cpp  front.h  primitives.cpp  primitives.h  query.cpp  query.h
src/helpers/: helpers.cpp  helpers.h  helpers_templates.h
src/io/: io.cpp  io.h  io_details.h
src/normals/: normals.cpp  normals.h  normals_details.h
